sumo/tests/sumo/extended/wauts/errors/cross3ltl_error_missing_startprog/errors.sumo
Error: Attribute 'startProg' is missing in definition of waut 'w1'.
Quitting (on error).
